--- a/output/GDP_REPORT_local.html
+++ b/output/GDP_REPORT_local.html
@@ -75,28 +75,28 @@
             <h2>Overview</h2>
             <p> Real GDP grew at an annual rate of 2.8 percent in the third quarter of 2024, according to the Bureau of Economic Analysis's second estimate, equal to the 50 year average. Growth last quarter was 3.0 percent. GDP now amounts to $29.4 trillion in current dollars. With the gross national debt currently at $36.1 trillion, this debt-to-GDP ratio is 123%.</p>
             <div class="chart">
-                <img src="../output/charts/since22.png" alt="Annualized real GDP growth since Q1 2022">
+                <img src="charts/since22.png" alt="Annualized real GDP growth since Q1 2022">
             </div>
         </section>
         <section>
             <h2>Contributors to GDP Growth</h2>
             <p> Of the 2.8 percent growth in real GDP, consumer spending was the largest contributor to growth, accounting for 56 percent of gross growth. Within consumer spending, services spending was the largest contributor, accounting for 29 percent of overall GDP growth. The second largest contributor was government spending and investment which accounted for 20 percent of total growth, with federal spending  driving the contribution of government spending and investment.  Exports accounted for 19 percent of total growth, with this growth primarily attributable to equipment exports. Private investment comprised 5 percent of total growth. Growth attributable to equipment and intellectual property products investment was partially offset by contractions in structures, residential, and inventory investment.  Imports, which are counted against GDP, dectracted 1.4 percentage points from GDP growth. </p>
             <div class="chart">
-                <img src="../output/charts/contributors.png" alt="Percentage point contributions to GDP growth">
+                <img src="charts/contributors.png" alt="Percentage point contributions to GDP growth">
             </div>
         </section>
         <section>
             <h2>Changes This Quarter</h2>
             <p> Consumer spending grew by 3.5 percent, with spending on goods increasing by 5.6 percent and spending on services increasing by 2.6 percent. Private investment grew by 1.1 percent, with growth in equipment and intellectual property products investment partially offset by declines in nonresidential structures and residential investment. Government spending and investment grew by 5.0 percent, with growth in federal defense and nondefense spending as well as in state and local spending. Exports grew by 7.5 percent, with goods exports increasing by 10.3 percent and services exports increasing by 2.4 percent. Imports grew by 10.2 percent, with goods imports increasing by 10.6 percent and services imports increasing by 8.5 percent. </p>
             <div class="chart">
-                <img src="../output/charts/growth_comparison.png" alt="Growth in GDP components in Q3 2024">
+                <img src="charts/growth_comparison.png" alt="Growth in GDP components in Q3 2024">
             </div>
         </section>
         <section>
             <h2>Revisions</h2>
             <p> In the second estimate, gross domestic product and government spending and investment remained unchanged from the advance estimate. Gross private investment, nonresidential investment, residential investment, and state and local government spending were revised upwards, while consumer spending, exports, imports, and federal government spending were revised downwards. These changes are in the table below.  </p>
             <div class="table">
-                <img src="../output/charts/revisions.png" alt="Revisions to Growth in 3rd Estimate">
+                <img src="charts/revisions.png" alt="Revisions to Growth in 3rd Estimate">
             </div>
         </section>
     </div>
